examples/invalid/07_payloadless_variant_call.lane
// invalid: payloadless variants are values, not zero-argument calls
module Examples.Invalid07

pub enum Option[A] {
  none
  some(A)
}

pub let value : Option[Int] = Option::none()
